style.css
*{
    box-sizing: border-box;
    margin:0rem;
    padding:0rem;
    border:1px solid red;
}
body{
    /* height:100%;
    width: 100%; */
    background:rgb(232, 238, 247)
}

.container{
    display:flex;
    flex-direction: column;
    align-items: center;
}
.orderComp{
    display:flex;
    flex-flow: column nowrap;
    align-items: center;
    max-width:80%;
    /* max-height:30%; */
    /* margin:80px 30px 0px 30px; */
    
    /* border:1px solid clear; */
    border-radius: 20px;
    background:white;
}

.imgParent{
    
   
}

.heroImg{
    
    
    border-top-left-radius:15px;
    border-top-right-radius:15px;
}
.summaryParent{
    display:Flex;
    flex-flow:column nowrap;
    align-items: center;
    margin-top:3.5rem;
    /* min-width:50%; */
    /* max-width: 60%; */
}
.summaryTitle{
    font-weight: bold;
    font-size: 2rem;
    color:#3b3b70;
}
.summary{
    width:75%;
    text-align:center;
    margin-top:1rem;
    font-size: 20px;
    line-height: 30px;
    color:rgb(113, 127, 166);
}

.annualPlan{
    display:flex;
    flex-flow: row nowrap;
    align-items:center;
    justify-content:space-around;
    width:80%;
    /* max-height:10vh; */
    margin-top:3rem;
    background: rgb(248, 248, 255);
    border-radius: 10px;
    margin-bottom:2.5rem;
}

.firstGroup{
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-right:3.5rem;
}

.secondGroup{
    font-weight:bold;
}

.annualTitle{
    color:#3b3b70;
    font-weight: bold;
}

.annualCost{
    color:#808090;
    font-weight: bold;
    margin-top:.5rem;
}
.paymentParent{
    min-width:80%;
    /* height:50%; */
    display:flex;
    justify-content: center;
    box-shadow: 5px 20px 20px rgb(0 0 0 / 0.2);
    border-radius: 15px;
    
}
.paymentButton{
    color:white;
    height:6vh;
    width: 100%;
    background:rgb(56, 42, 225);
    border:1px solid rgb(56, 42, 225);
    border-radius: 10px;
    font-size: 20px;
    /* box-shadow: 5px 5px 10px; */
    
}
.cancelParent{
    margin-top:2.5rem;
    margin-bottom:3.5rem;
}
.cancelButton{
    color:grey;
    font-size: 20px;
    font-weight: bold;
}

.attribution{
    margin-top:1rem;
}

